src/objects/Candidate_Safeguarding__c.object
<CustomObject>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>TEXT(Candidate_FullName__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_FullName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Safeguarding</relationshipLabel>
        <relationshipName>Candidate_Safeguarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_Of_Incident__c</fullName>
        <inlineHelpText>Summary of the incident (Can only be viewed by Compliance Manager)</inlineHelpText>
        <label>Details Of Incident</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Details_Of_Incident__c</fullName>
        <inlineHelpText>Full details of the incident (Can be viewed by Compliance Manager only)</inlineHelpText>
        <label>Full Details Of Incident</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Candidate Safeguarding</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Safeguarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>